--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
       <h1>DO you love me? 🤗</h1>
       <p>~mai tera hi hoo</p>
       <div class="btn">
-        <a href="2.html">Yes</a>
-        <a href="" >No</a>
+        <a href="5.html">Yes</a>
+        <a href="2.html" >No</a>
       </div>
     </div>
   </body>
