--- a/2.html
+++ b/2.html
@@ -29,8 +29,8 @@
       <p>itte jldi nhi mtt bol🙄</p>
 
       <div class="btn">
-        <a href="3.html">Yes</a>
-        <a href="" >No</a>
+        <a href="5.html">Yes</a>
+        <a href="3.html" >No</a>
       </div>
     </div>
   </body>
