--- a/3.html
+++ b/3.html
@@ -32,8 +32,8 @@
       <p>kyu aisa kr rahi hai 😣</p>
 
       <div class="btn">
-        <a href="4.html">Yes</a>
-        <a href="">No</a>
+        <a href="5.html">Yes</a>
+        <a href="4.html">No</a>
       </div>
     </div>
   </body>
