--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         src="https://tenor.com/embed.js"
       ></script>
       <h1>DO you love me? 🤗</h1>
-      <p>~mai tera hi hoo</p>
+      <p>~Humm tohhh tumhareee hiiii heinnnn sirffffff Madaaaammmm</p>
       <div class="btn">
         <a href="5.html">Yes</a>
         <a href="2.html" >No</a>
