--- a/3.html
+++ b/3.html
@@ -29,7 +29,7 @@
       ></script>
 
       <h1>Ek aur baar Soch le! 😣</h1>
-      <p>kyu aisa kr rahi hai 😣</p>
+      <p>ache se</p>
 
       <div class="btn">
         <a href="5.html">Yes</a>
